test/Runner/errors/tests/MI/Test5.mi.js
eve("Suite", () => {
	eve("Suite 2", () => {})
});